# thesis-pt-v2a

./: .env.example  .gitignore  .gitmodules  CONFIGURATION.md  Dockerfile  PHASE3B_IMPLEMENTATION.md  PHASE3B_QUICKSTART.md  README.md  SETUP.md  docker-compose.full.yml  docker-compose.generation.yml  setup.sh  test_concurrent_vram.py
aax-plugin/: CMakeLists.txt  CROSS_PLATFORM_IMPROVEMENTS.md  DEVELOPMENT_ROADMAP.md  EMBEDDED_PYTHON_SETUP_NEW.md  MAC_BUILD_GUIDE.md  MIGRATION_SUMMARY.md  PHASE1_SUMMARY.md  PHASE1_TESTING.md  PHASE3B_COMPLETE.md  build_mac_arm.sh  build_mac_intel.sh  create_installer_mac.sh  extract_memory_locations.py  install_requirements.sh  installer_windows.iss  setup_python_mac_intel.sh  sign_aax_mac.sh
aax-plugin/Resources/: EMBEDDED_PYTHON_SETUP.md  README.md  python_runtime_requirements.txt  setup_embedded_python.bat  setup_python_mac.sh  setup_python_windows.ps1
aax-plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SoundRecommendationsComponent.cpp  SoundRecommendationsComponent.h
cloudflared/: config.yml  config.yml.example  documentation.md
companion/: HUNYUANVIDEO_FOLEY_CLIENT.md  MIGRATION_TO_PY_PTSL.md  README_EMBEDDINGS.md  auto_spotting_wizard.py  comfyui_v2a_client.py  comfyui_v2a_client_requirements.txt  generate_embeddings.py  hunyuanvideo_foley_api_client.py  requirements_v2.txt  setup_v2.ps1  sound_search_api_client.py  standalone_api_client.py  test_auto_detect_workflow.py  test_full_integration.py  test_ptsl_connection.py
companion/api/: __init__.py  client.py  config.py  config.sample.json  hunyuanvideo_foley_client.py  sound_search_client.py
companion/cli/: __init__.py  actions.py  error_handler.py  sound_search.py
companion/comfyUI_workflows/: mm-audio_testAPI(fp16)_ffmpeg(u).py  mmaudio_test-API(fp16).json  mmaudio_test-API(fp16)_ffmpeg(u).json  mmaudio_test-API.json
companion/database/: check_database_integrity.py  fix_file_paths.py  generate_embeddings.py  import_bbc_sounds.py  import_orphaned_sounds.py
companion/ptsl_integration/: PTSL_pb2_grpc.py  README.md  TESTING_GUIDE.md  __init__.py  clip_info.py  ptsl_client.py  ptsl_client_v1_LEGACY.py  ptsl_client_v2.py  requirements.txt  setup.txt  setup_ptsl_env.txt  test_integration.py  timeline.py  video.py
companion/test_scripts/: benchmark_api_latency.py  test_auto_detect_workflow.py  test_concurrent_vram.py  test_concurrent_vram_backup.py  test_full_integration.py  test_get_clip_list.py  test_ptsl_connection.py  test_queue.py  test_rename_trick.py  test_t2a.py  test_video_retrieval.py
companion/video/: __init__.py  ffmpeg.py  validation.py
db-dump/: README.md
db-init/: 01-init.sql  README.md
hunyuanvideo-foley-API/: main.py  preload_model.py  requirements.txt
shared/: config.py
sound-search-API/: .dockerignore  Dockerfile  README.md  main.py  preload_model.py  requirements.txt
sound-search-API/utils/: __init__.py  db_client.py  xclip_encoder.py
standalone-API/: LOGGING_GUIDE.md  README.md  compare_audio_precision.py  main.py  memory_profiler.py  monitor_memory.sh  monitor_memory_leak.sh  preload_model.py  requirements.txt  start_api_verbose.sh  view_logs.sh
